--- a/notes.css
+++ b/notes.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0;
@@ -97,7 +96,7 @@
 .leftbox h2{
     font-family: 'Rubik Dirt', bold;
     padding-left: 40px;
-    color: seagreen;
+    color: rgb(15, 135, 67);
    
 }
 
@@ -321,7 +320,7 @@
 .content ul li a{
     list-style-type: none;
     text-decoration: none;
-    color:brown;
+    color:rgb(241, 121, 8);
     
 }
 .content ul li a:hover{
